[tool.poetry]
name = "wrts"
version = "0.6.0"
description = "A small lil library for using the WRTS API "
authors = ["BadPythonCoder <xsare435@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.31.0"

[tool.poetry.scripts]
test = "example:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
